# sero

./: .gitignore  AI_PLAN.md  CHANGE-FileViewer-Architecture.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  WARP.md  debug_test.py  install.ps1  install.sh  install_sero.ps1  install_sero.sh  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  release.yml
backend/: CHANGELOG.md  README.md  pyproject.toml
backend/src/: __init__.py  app.py
backend/src/api/: __init__.py
backend/src/core/: __init__.py  ai_ollama.py  config.py  database.py  defaults.py  geometry.py  logging.py  security.py
backend/src/crud/: __init__.py  ai_settings.py  base.py  documents.py  files.py  projects.py  prompts.py  selections.py  support.py  templates.py
backend/src/db/: __init__.py  models.py
backend/src/service/: __init__.py  ai_service.py  crypto_service.py  geometry_service.py  redactor_service.py  text_extractor_service.py
backend/src/static/: index.html
backend/tests/: README.md  conftest.py  test_ai_apply_project_stream.py  test_ai_apply_router.py  test_ai_apply_stream.py  test_ai_service.py  test_app_error_handlers.py  test_base_crud.py  test_database.py  test_db_types.py  test_document_ai_integration.py  test_documents_controller.py  test_files_controller.py  test_geometry.py  test_integration.py  test_ollama_live.py  test_pdf_redactor.py  test_projects_controller.py  test_prompts_controller.py  test_redactor_service.py  test_security_service.py  test_selections_controller.py  test_support_crud.py  test_templates_controller.py
docs/: AI_Processing_Progress_Plan.md  ai-integration-plan.md  batch-redaction-remediation-plan.md  db-refactor-2025-08.md  document-viewer-refactoring-plan.md  editor-migration.md  entity-relationship.md  frontend-ai-credentials-session-cache.md  frontend-schema-alignment-2025-08.md  project-trust-migration.md  project-trust-session.md  provider-hooks-reorg.md  selection-lifecycle-refactor.md  selection-staging-commit-plan.md  user-security-refactor-1-2025-08.md
docs/diagrams/: entity-relationship.md
docs/migrations/: db-refactor-2025-08.md
frontend/: pnpm-workspace.yaml  vite.config.ts  vitest.config.ts
frontend/public/docs/: getting-started.md  manifest.json  project-management.md  redaction-workflow.md  security-model.md
frontend/src/hooks/: index.ts
frontend/src/lib/: axios.ts  crypto.ts  document-viewer-api.ts  editor-api.ts
frontend/src/pages/: swagger-page.tsx
frontend/src/providers/: ai-credentials-provider.tsx  ai-processing-provider.tsx  index.ts  theme-provider.tsx
frontend/src/types/: ai.ts  base.ts  document.ts  enums.ts  file.ts  index.ts  project.ts  prompt.ts
frontend/src/utils/: conversions.ts  functions.ts  markdown.ts
src/backend/: __init__.py  app.py
src/backend/api/: enums.py
src/backend/core/: ai_ollama.py  config.py  database.py  defaults.py  logging.py  pdf_redactor.py  prompt_composer.py  redactor.py  security.py
src/backend/crud/: __init__.py  ai_settings.py  base.py  documents.py  files.py  originals.py  projects.py  prompts.py  redacted.py  selections.py  support.py  templates.py
src/backend/db/: models.py  types.py
src/backend/service/: ai_service.py  crypto_service.py  geometry_service.py  prompt_composer.py  redactor_service.py  text_extractor_service.py
src/backend/services/: redaction_service.py
src/backend/static/: index.html
src/backend/utils/: controller_utils.py
src/frontend/: DIRECTORY_STRUCTURE.md  MIGRATION_PLAN.md  index.html  jest.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.jest.json  vite.config.ts
src/frontend/docs/: selection-lifecycle-refactor.md
src/frontend/src/: App.tsx  RefactorApp.tsx  index.css  main.tsx  test-setup.ts
src/sero/: __init__.py  _defaults.py  app.py  cli.py  config.py  consts.py  crud.py  db.py  defaults.py  models.py  schemas.py  types.py  utils.py
tests/: DIRECTIVE.md  README.md  conftest.py  test_ai_apply_project_stream.py  test_ai_apply_router.py  test_ai_apply_stream.py  test_ai_service.py  test_api_errors.py  test_app_error_handlers.py  test_base_crud.py  test_crypto_api.py  test_database.py  test_db_types.py  test_document_ai_integration.py  test_document_processing.py  test_documents_api.py  test_documents_api_extended.py  test_documents_controller.py  test_files_api.py  test_files_controller.py  test_geometry.py  test_integration.py  test_ollama_live.py  test_pdf_redactor.py  test_projects_api.py  test_projects_controller.py  test_prompts_api.py  test_prompts_controller.py  test_redaction_service.py  test_redactor.py  test_redactor_service.py  test_security_service.py  test_selections_api.py  test_selections_controller.py  test_support_crud.py  test_templates_controller.py  test_timezone_datetime.py
(+638 files in other folders)
